clang/test/BSC/Negative/SafeZone/partial_init_with_pointers/partial_init_with_pointers.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
_Safe T *_Owned safe_malloc<T>(T t);
void *malloc(unsigned long);

struct StructWithPointer {
  int * _Owned ptr;
  int value;
  char name[10];
};

union UnionWithPointer {
  int * ptr;
  int value;
};

_Safe int main(void) {
  // error: struct with pointer fields cannot be partially initialized
  // int * _Owned ptr= safe_malloc(4);
  struct StructWithPointer s1 = {.ptr=safe_malloc(4)};

  // ok: union will never be partially initialized
  union UnionWithPointer u1 = {.value=0};

  // ok: complete initialization is allowed
  struct StructWithPointer s2 = {safe_malloc(4), 0, "test"};
  
  // ok: union will never be partially initialized
  int *a  = _Unsafe((int*)malloc(sizeof(int)));
  union UnionWithPointer u2 = {.ptr=a};

  return 0; // expected-error {{field memory leak of value: `s2`, s2.ptr is leak}}
            // expected-error@-1 {{field memory leak of value: `s1`, s1.ptr is leak}}
}
